########### 2015-3-31  #################
create index idx_mergetrade_receiver_phone on shop_trades_mergetrade(receiver_phone);
########### 2015-3-23  #################
alter table shop_items_product change retrieval_num sale_num int(11) NOT NULL;
alter table shop_items_productsku change retrieval_num sale_num int(11) NOT NULL;
alter table shop_items_product add column sale_time date,add index item_sale_time_idx(sale_time);
########### 2015-3-16  #################
alter table shop_items_product add column sale_charger varchar(32) NOT NULL, add index (sale_charger);
alter table shop_items_product add column storage_charger varchar(32) NOT NULL, add index (storage_charger);
########### 2015-3-9  #################
alter table shop_weixin_account add js_ticket varchar(256) NOT NULL;
alter table shop_weixin_account add js_expired datetime NOT NULL;
########### 2015-3-5  #################
alter table shop_weixin_sale_linkclicks add link_type varchar(8) NOT NULL;
update shop_weixin_sale_linkclicks set link_type='sample';
alter table shop_weixin_sale_linkclicks drop index shop_weixin_sale_linkclicks_6338e735;
create index shop_weixin_sale_linkclicks_118edc33 on shop_weixin_sale_linkclicks(link_type);
create unique index user_openid on shop_weixin_sale_linkclicks(user_openid,link_url,link_type);
########### 2015-2-27  #################
alter table shop_weixin_user add referal_count int(11) NOT NULL;
update shop_weixin_user set charge_status = 'uncharge';
alter table shop_weixin_user add charge_status varchar(16) NOT NULL;
########### 2015-2-10  #################
alter table shop_items_daysale add column confirm_num int(11) NOT NULL;
alter table shop_items_daysale add column confirm_payment double NOT NULL;
######## 2015-1-22 ##########
alter table shop_weixin_user add column unionid varchar(64) NOT NULL;
alter table shop_weixin_user add index shop_weixin_user_9ac2212(unionid);
######## 2015-1-5##########