@@ -5,7 +5,7 @@ from django.contrib.auth.decorators import login_required
 
 from views import logclicks
 from views import StatsView,MamaStatsView,CashoutView,CashOutList,CarryLogList
-from .views import chargeWXUser
+from .views import chargeWXUser,XiaoluMamaModelView
 
 urlpatterns = patterns('',
     url(r'^$',MamaStatsView.as_view()),
@@ -16,4 +16,5 @@ urlpatterns = patterns('',
     url(r'^(?P<linkid>\d+)/$',logclicks),
     
     url(r'^charge/(?P<pk>\d+)/$',chargeWXUser),
+    url(r'^xlmm/(?P<pk>\d+)/$', XiaoluMamaModelView.as_view()),
 )
